[package]
name = "pomodoro-rs"
version = "0.1.0"
authors = ["Michele Lacchia <michelelacchia@gmail.com>"]
license = "ISC"
edition = "2018"

description = "A lightweight pomodoro timer"
homepage = "https://github.com/rubik/pomodoro-rs"
repository = "https://github.com/rubik/pomodoro-rs"

[dependencies]
structopt = "0.3"
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tower = "0.3"
pretty_env_logger = "0.4.0"
log = "0.4.0"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["postgres", "macros", "runtime-tokio", "uuid"] }
anyhow = "1.0"

[build-dependencies]
tonic-build = { version = "0.3", features = ["prost"] }
