[package]
name = "pomodoro-rs"
version = "0.1.0"
authors = ["Michele Lacchia <michelelacchia@gmail.com>"]
license = "ISC"
edition = "2018"

description = "A lightweight pomodoro timer"
homepage = "https://github.com/rubik/pomodoro-rs"
repository = "https://github.com/rubik/pomodoro-rs"

[workspace]

[dependencies]
pomolib = { path = "pomolib" }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
log = "0.4.0"
notify-rust = "4.0"
pretty_env_logger = "0.4.0"
prost = "0.6"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["postgres", "macros", "runtime-tokio"] }
structopt = "0.3"
tokio = { version = "0.2", default-features = false, features = ["macros", "rt-core", "time"] }
tonic = "0.3"
tower = "0.3"

[build-dependencies]
tonic-build = { version = "0.3", features = ["prost"] }
