[package]
name = "pomolib"
version = "0.1.0"
authors = ["Michele Lacchia <michelelacchia@gmail.com>"]
license = "ISC"
edition = "2018"

description = "A pomodoro timer library"
homepage = "https://github.com/rubik/pomodoro-rs"
repository = "https://github.com/rubik/pomodoro-rs"

[dependencies]
tokio = { version = "0.2", default-features = false, features = ["macros"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
